# eos-discovery-feed

./: .gitignore  Makefile.am  autogen.sh  build-flatpak.sh  com.endlessm.DiscoveryFeed.json.in  configure.ac
.tx/: config
data/: activatable-frame.ui  app-content-description.ui  app-store-description.ui  app-store-link-card.ui  app-store-link.ui  application.css  available-apps.ui  com.endlessm.DiscoveryFeed.data.gresource.xml  com.endlessm.DiscoveryFeed.gschema.xml.in  com.endlessm.DiscoveryFeed.service.in  com.endlessm.GrandCentral.data.gresource.xml  com.endlessm.GrandCentral.service  com.endlessm.GrandCentral.service.in  content-card-layout.ui  content-card.ui  content-list-item.ui  content-preview.ui  installable-app-card.ui  inventory-bubble.ui  main.ui  video-card-layout.ui  video-card.ui  word-quote-pair.ui
debian/: changelog  control  copyright
libfeed/: feed-all-async-tasks-private.h  feed-all-async-tasks.c  feed-app-card-store.c  feed-app-card-store.h  feed-base-card-store.c  feed-base-card-store.h  feed-card-layout-direction.h  feed-enums.c.in  feed-knowledge-app-artwork-card-store.c  feed-knowledge-app-artwork-card-store.h  feed-knowledge-app-card-store.c  feed-knowledge-app-card-store.h  feed-knowledge-app-news-card-store.c  feed-knowledge-app-news-card-store.h  feed-knowledge-app-proxy.c  feed-knowledge-app-proxy.h  feed-knowledge-app-video-card-store.c  feed-knowledge-app-video-card-store.h  feed-model-ordering.c  feed-model-ordering.h  feed-orderable-model.c  feed-orderable-model.h  feed-provider-info.c  feed-provider-info.h  feed-provider-lookup.c  feed-provider-lookup.h  feed-proxy-factory.c  feed-proxy-factory.h  feed-quote-card-store.c  feed-quote-card-store.h  feed-sizes.h  feed-store-provider.c  feed-store-provider.h  feed-text-sanitization.c  feed-text-sanitization.h  feed-word-card-store.c  feed-word-card-store.h  feed-word-quote-card-store.c  feed-word-quote-card-store.h
po/: POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  com.endlessm.DiscoveryFeed.pot  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  fy.po  ga.po  gd.po  (+79 more)
src/: com.endlessm.DiscoveryFeed.in  com.endlessm.DiscoveryFeed.src.gresource.xml  com.endlessm.GrandCentral.in  com.endlessm.GrandCentral.src.gresource.xml  config.js.in  imageCoverFrame.js  main.js  modelOrdering.js  stores.js  textSanitization.js  widgetSurfaceCache.js
tests/js/: testDiscoveryFeed.js  testModelOrdering.js
